# principles

./: .gitignore  BASIC_CONCEPTS.md  README.md
Challenges/Cracking_The_Coding_Interview/: README.md
Challenges/Cracking_The_Coding_Interview/Data_Structures/001-Arrays_Strings/: README.md
Challenges/LeetCode/164_Maximum_Gap/: main.cpp
Challenges/LeetCode/237_Delete_Node_In_A_Linked_List/: main.cpp
Challenges/LeetCode/238_Product_Of_Array_Except_Self/: main.cpp
Challenges/LeetCode/724_Find_Pivot_Index/: main.cpp
Fundamentals/Cast/ConstCast/: CMakeLists.txt  main.cpp
Fundamentals/Cast/DynamicCast/: CMakeLists.txt  main.cpp
Fundamentals/Cast/ReinterpretCast/: CMakeLists.txt  main.cpp  private.cpp
Fundamentals/Cast/StaticCast/: CMakeLists.txt  main.cpp
Fundamentals/Constructors/Copy/: CMakeLists.txt  deep.cpp  main.cpp  shallow.cpp
Fundamentals/Constructors/Default/: CMakeLists.txt  main.cpp
Fundamentals/Constructors/Move/: CMakeLists.txt  deleteMove.cpp  main.cpp  performance.cpp  vector.cpp
Fundamentals/Constructors/Overload/: CMakeLists.txt  main.cpp
Fundamentals/Constructors/Parameterized/: CMakeLists.txt  main.cpp
Fundamentals/Constructors/RuleOfFive/: CMakeLists.txt  main.cpp
Fundamentals/Constructors/RuleOfThree/: CMakeLists.txt  main.cpp
Fundamentals/Constructors/RuleOfZero/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Array/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Deque/: CMakeLists.txt  main.cpp
Fundamentals/Containers/ForwardList/: CMakeLists.txt  main.cpp
Fundamentals/Containers/List/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Map/: CMakeLists.txt  main.cpp
Fundamentals/Containers/MultiMap/: CMakeLists.txt  main.cpp
Fundamentals/Containers/MultiSet/: CMakeLists.txt  main.cpp
Fundamentals/Containers/PriorityQueue/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Queue/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Set/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Stack/: CMakeLists.txt  main.cpp
Fundamentals/Containers/Vector/: CMakeLists.txt  main.cpp
Fundamentals/IO/FStream/: CMakeLists.txt  main.cpp
Fundamentals/IO/IOManip/: CMakeLists.txt  main.cpp
Fundamentals/IO/IOStream/: CMakeLists.txt  main.cpp
Fundamentals/Inheritance/Diamond/: CMakeLists.txt  main.cpp  virtual.cpp
Fundamentals/Inheritance/Order/: CMakeLists.txt  main.cpp  virtual.cpp  virtualFix.cpp
Fundamentals/Lambdas/: CMakeLists.txt  main.cpp
Fundamentals/Size/BasicTypes/: CMakeLists.txt  main.cpp
Fundamentals/Size/Packing/: CMakeLists.txt  main.cpp
Fundamentals/Size/Padding/: CMakeLists.txt  main.cpp  virtual.cpp
Fundamentals/Templates/Concepts/: CMakeLists.txt  main.cpp
Fundamentals/Templates/Fold_Expressions/: CMakeLists.txt  main.cpp
Fundamentals/Templates/Requires_Expression/: CMakeLists.txt  main.cpp
Fundamentals/Templates/Variadic/: CMakeLists.txt  main.cpp
Fundamentals/Threads/Atomic/: CMakeLists.txt  main.cpp
Fundamentals/Threads/Callable/: CMakeLists.txt  main.cpp
Fundamentals/Threads/ConditionVariable/: CMakeLists.txt  main.cpp  wait.cpp
Fundamentals/Threads/Execution/: CMakeLists.txt  detach.cpp  join.cpp
Fundamentals/Utility/Exception/: CMakeLists.txt  main.cpp
Fundamentals/Utility/Exception/NoExcept/: CMakeLists.txt  main.cpp
Fundamentals/Utility/PerfectForward/: CMakeLists.txt  main.cpp
Fundamentals/Utility/Variant/: CMakeLists.txt  main.cpp  visit.cpp
Interview_Prep/Advanced_Object-Oriented_Programming/Abstract_Class_And_Pure_Virtual_Functions/: CMakeLists.txt  abstract.cpp  pure_virtual_function.cpp  virtual_function.cpp
Interview_Prep/Advanced_Object-Oriented_Programming/Cast/: CMakeLists.txt  const.cpp  dynamic.cpp  reinterpret.cpp  static.cpp
Interview_Prep/Advanced_Object-Oriented_Programming/Multiple_Inheritance/: CMakeLists.txt  diamond.cpp  diamond_solution.cpp  multiple.cpp
Interview_Prep/Advanced_Object-Oriented_Programming/Smart_Pointers/: CMakeLists.txt  shared.cpp  unique.cpp  weak.cpp
Interview_Prep/SOLID/: CMakeLists.txt  dependency.cpp  interface.cpp  liskov.cpp  open_close.cpp  single.cpp
Interview_Prep/Templates/: CMakeLists.txt  class.cpp  concepts.cpp  functions.cpp  parameter.cpp  sfinae.cpp  specialization.cpp  variadic.cpp
Libs/Boost/Asio/: README.md
Libs/Boost/Asio/Timer1/: CMakeLists.txt  main.cpp
Libs/Boost/Asio/Timer2/: main.cpp  (+1 more)
Libs/Boost/Asio/Timer3/: CMakeLists.txt  main.cpp
Libs/Boost/Lambda/: CMakeLists.txt  main.cpp
Libs/Catch2/Assertion_Macros/Natural_Expressions/: CMakeLists.txt  test.cpp
Libs/SimdJson/Basics/CheckingForTrailingContent/: CMakeLists.txt  main.cpp
Patterns/Chain_Of_Responsability/: CMakeLists.txt  chain_interface.h  main.cpp  responsability_one.cpp  responsability_one.h  responsability_three.cpp  responsability_three.h  responsability_two.cpp  responsability_two.h
Patterns/Command/: CMakeLists.txt  command.cpp  command.h  iCommand.h  main.cpp  manager.cpp  manager.h  other_command.cpp  other_command.h
Patterns/Factory/: CMakeLists.txt  creator.h  main.cpp  product.h
Patterns/Mediator/: CMakeLists.txt  colleague.cpp  colleague.h  main.cpp  mediator.cpp  mediator.h
Patterns/Memento/: CMakeLists.txt  main.cpp  memento.cpp  memento.h  originator.cpp  originator.h
Patterns/Observer/: CMakeLists.txt  main.cpp  observer.h  observer_one.cpp  observer_one.h  observer_two.cpp  observer_two.h  subject.cpp  subject.h
Patterns/Singleton/: CMakeLists.txt  main.cpp
Patterns/State/: CMakeLists.txt  context.cpp  context.h  main.cpp  state.h  state_one.cpp  state_one.h  state_two.cpp  state_two.h
Patterns/Strategy/: CMakeLists.txt  context.cpp  context.h  main.cpp  strategy.h  strategy_plus_one.cpp  strategy_plus_one.h  strategy_plus_ten.cpp  strategy_plus_ten.h
Patterns/Template_Method/: CMakeLists.txt  abstract.cpp  abstract.h  implementation.cpp  implementation.h  main.cpp
Patterns/Visitor/: CMakeLists.txt  element.h  element_one.cpp  element_one.h  element_two.cpp  element_two.h  main.cpp  visitor.h  visitor_one.cpp  visitor_one.h  visitor_two.cpp  visitor_two.h
Utils/: StopWatch.h
(+129 files in other folders)
